tdf#126590 DOCX import: fix absolute hyperlinks to documents

Absolute links in DOCX documents created with Word didn't work.

Change-Id: Ie23c9ded1c88752768b925ec26df3061beeddd8e